# VRTstatistics

./: .gitignore  CHANGELOG.md  CLAUDE.md  mmsys-playground.ipynb  readme.md  setup.cfg  test_plots.py  testing.md
VRTrun/: pyproject.toml  setup.cfg
VRTrun/src/VRTrun/: __init__.py  __main__.py  orchestrator.py  runner.py  session.py  sessionconfig.py
VRTrunserver/: pyproject.toml  setup.cfg
VRTrunserver/src/: VRTrunserver.py
VRTstatistics/: setup.cfg
example/: README.md  VRTstatistics-config.json  config.json
example-old/: README.md
example-old/results-20240705-1155/: combined.json
example/results-20240704-2252/: combined.json  receiver-unity-log.txt  sender-unity-log.txt
example/results-20240705-1155/: combined.json  receiver-unity-log.txt  sender-unity-log.txt
examples/latency/: latency-analysis.py
examples/latency-2way/: latency-2way-analysis.ipynb  latency-2way-analysis.py
examples/latency-tiled-voice/: latency-analysis.ipynb
examples/simple/: simple-sanity-check.ipynb  simple-sanity-check.py
recoveryscripts/: readme.md  recoverstats.py
scripts/: combine.py  filter.py  genplots.sh  getlogs-jitter.sh  getlogs.sh  read_combined.m  read_multiple_tiles.m  readme.md  run-jitter.sh  stats2json.py
src/VRTstatistics/: analyze.py  annotator.py  datastore.py  parser.py  plots.py  runner.py  runnerconfig.py
vqeg_data/: vqeg_analyze.py  vqeg_run.sh
vqeg_data/Ashu-test-vrbig-vrsmall/: receiver-unity-log.txt
vqeg_data/test-jack-flauwte/: run.sh
vqeg_data/test-jack-home/: run.sh
vqeg_data/test-vrbig-vrsmall/: combined.json  run.sh  (+1 more)
(+44 files in other folders)
