[metadata]
name = VRTrun
version = 0.9
author = Jack Jansen
author_email = Jack.Jansen@cwi.nl
description = Run VR2Gather players using VRTrunserver
long_description = file: readme.md
long_description_content_type = text/markdown
url = https://github.com/cwi-dis/VRTstatistics
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.11
install_requires =
	requests
    python-socketio

[options.entry_points]
console_scripts =
	VRTrun = VRTrun.__main__:main
	
[options.packages.find]
where = src
