[metadata]
name = VRTrunserver
version = 0.9
author = Jack Jansen
author_email = Jack.Jansen@cwi.nl
description = Server to start VR2Gather players for VRTrun
long_description = file: readme.md
long_description_content_type = text/markdown
url = https://github.com/cwi-dis/VRTstatistics
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
py_modules =
    VRTrunserver
packages = find:
python_requires = >=3.11
install_requires =
	flask
	psutil
	WinTmp; platform_system == 'Windows'

[options.entry_points]
console_scripts =
	VRTrunserver = VRTrunserver:main	

[options.packages.find]
where = src
